--- a/css/style.css
+++ b/css/style.css
@@ -166,14 +166,18 @@ padding-bottom: 10px;
     position: absolute;
     top: 10px;
     right: 20px;
-    width: 10px;
-    height: 18px;
+    width: 21px;
+    height: 21px;
     border: 0;
     outline: 0;
-    background-image: url(../imgs/arrow.png);
+    background-image: url(../imgs/send.svg);
     background-color: #fff;
     background-repeat: no-repeat;
     background-size: contain;
+    transition: .2s;
+}
+.chat-input input[type="submit"]:hover{
+    background-image: url(../imgs/send2.svg);
 }
 ::-webkit-scrollbar{
     width: 4px;
