--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ padding-bottom: 10px;
 }
 .chat-input input[type="submit"] {
     position: absolute;
-    top: 10px;
+    top: 8px;
     right: 20px;
     width: 21px;
     height: 21px;
@@ -174,11 +174,14 @@ padding-bottom: 10px;
     background-color: #fff;
     background-repeat: no-repeat;
     background-size: contain;
-    transition: .2s;
+    transition: .3s;
 }
-.chat-input input[type="submit"]:hover{
+.chat-input input[type="submit"]:hover,
+.chat-input input[type="submit"]:focus,
+.chat-input input[type="text"]:focus + input[type="submit"]{
     background-image: url(../imgs/send2.svg);
 }
+
 ::-webkit-scrollbar{
     width: 4px;
 }
